# test-jupyter-extensions

./: .gitignore  README.md  atlantico.ipynb  dibulla_example.ipynb  la_guajira.ipynb  pyproject.toml
